db-migration-provider/src/main/java/javacc/sqlitequeryparser/CCSQLiteQueryParser.java
/* CCSQLiteQueryParser.java */
/* Generated By:JavaCC: Do not edit this line. CCSQLiteQueryParser.java */
package javacc.sqlitequeryparser;

import db.migration.model.Column;
import db.migration.model.Index;
import db.migration.model.IndexName;
import db.migration.model.Table;
import db.migration.model.modification.DBChange;
import db.migration.model.modification.alter.table.AbstractAlterType;
import db.migration.model.modification.alter.table.AddColumn;
import db.migration.model.modification.alter.table.AlterTable;
import db.migration.model.modification.alter.table.RenameTo;
import db.migration.model.modification.alter.table.enums.AlterTableType;
import db.migration.model.modification.create.index.CreateIndex;
import db.migration.model.modification.create.table.*;
import db.migration.model.modification.create.table.enums.*;
import db.migration.model.modification.drop.DropIndex;
import db.migration.model.modification.drop.DropTable;
import db.migration.model.modification.insert.InsertIntoTable;

import java.util.ArrayList;
import java.util.List;



public class CCSQLiteQueryParser implements CCSQLiteQueryParserConstants {
        List<ParseException> parseErrors = new ArrayList<ParseException>();

    public DBChange analiseQuery() throws ParseException, TokenMgrError{
        return analise();
    }

        public List<ParseException> getParseErrors() {
        return parseErrors;
        }

  final public DBChange analise() throws ParseException {DBChange dbChange = null;
    try {
      if (jj_2_1(2)) {
        dbChange = createTable();
      } else if (jj_2_2(2)) {
        dbChange = drop();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case T_CREATE:{
          dbChange = createIndex();
          break;
          }
        case T_ALTER:{
          dbChange = alterTable();
          break;
          }
        case T_INSERT:{
          dbChange = insertIntoTable();
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (ParseException e) {
parseErrors.add(e);
                        {if (true) throw e;}
    }
{if ("" != null) return dbChange;}
    throw new Error("Missing return statement in function");
  }

  final public String getObjectName() throws ParseException {Token token = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_IDENTIFIER:{
      token = jj_consume_token(T_IDENTIFIER);
      break;
      }
    case T_QUOTED_IDENTIFIER:{
      token = jj_consume_token(T_QUOTED_IDENTIFIER);
      break;
      }
    case TEXT:{
      token = jj_consume_token(TEXT);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return token.image;}
    throw new Error("Missing return statement in function");
  }

  final public CreateTable createTable() throws ParseException {CreateTable createTable = new CreateTable();
    Table table = null;
    List<ColumnDefinition> columnDefinitions = new ArrayList<ColumnDefinition>();
    String columnName = null;
    String columnDataType = null;
    ColumnDefinition columnDef = null;
    List<String> columnSpecs = new ArrayList<String>();
        TableConstraint tableConstraint = null;
        String constraintName = null;
        List<Column> columns = null;
        ConflictDecision conflictDecision = null;
        ForeignKeyClause foreignKeyClause = null;
    jj_consume_token(T_CREATE);
    jj_consume_token(T_TABLE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_IF:{
      jj_consume_token(T_IF);
      jj_consume_token(T_NOT);
      jj_consume_token(T_EXISTS);
createTable.setIfNotExists(true);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    table = Table();
    jj_consume_token(T_OPEN_BRACKET);
    columnDefinitions = ColumnDefinitions();
    label_1:
    while (true) {
      if (jj_2_3(4)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(T_COMMA);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_CONSTRAINT:{
        jj_consume_token(T_CONSTRAINT);
        constraintName = getObjectName();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_PRIMARY:{
        jj_consume_token(T_PRIMARY);
        jj_consume_token(T_KEY);
        columns = getColumns();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case T_ON:{
          conflictDecision = getConflictDecision();
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          ;
        }
createTable.addTableConstraint(new IndexedConstraint(constraintName,ConstraintType.PRIMARY_KEY,columns,conflictDecision));
                                conflictDecision = null;
                                constraintName = null;
        break;
        }
      case T_UNIQUE:{
        jj_consume_token(T_UNIQUE);
        columns = getColumns();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case T_ON:{
          conflictDecision = getConflictDecision();
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          ;
        }
createTable.addTableConstraint(new IndexedConstraint(constraintName,ConstraintType.UNIQUE,columns,conflictDecision));
                                conflictDecision = null;
                constraintName = null;
        break;
        }
      case T_FOREIGN:{
        jj_consume_token(T_FOREIGN);
        jj_consume_token(T_KEY);
        columns = getColumns();
        foreignKeyClause = getForeignKeyClause();
createTable.addTableConstraint(new ForeignKeyConstraint(constraintName,columns,foreignKeyClause));
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
constraintName = null;
    }
    jj_consume_token(T_CLOSE_BRACKET);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 66:{
      jj_consume_token(66);
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(0);
createTable.setTable(table);
                createTable.setColumnDefinitions(columnDefinitions);
                {if ("" != null) return createTable;}
    throw new Error("Missing return statement in function");
  }

  final public Table Table() throws ParseException {String schemaName = null;
    String tableName = null;
    if (jj_2_4(3)) {
      schemaName = getObjectName();
      jj_consume_token(67);
      tableName = getObjectName();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TEXT:
      case T_IDENTIFIER:
      case T_QUOTED_IDENTIFIER:{
        tableName = getObjectName();
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
Table table = new Table(schemaName,tableName);
        {if ("" != null) return table;}
    throw new Error("Missing return statement in function");
  }

  final public IndexName IndexName() throws ParseException {String schemaName = null;
        String indexStringName = null;
        IndexName indexName = null;
    if (jj_2_5(3)) {
      schemaName = getObjectName();
      jj_consume_token(67);
      indexStringName = getObjectName();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TEXT:
      case T_IDENTIFIER:
      case T_QUOTED_IDENTIFIER:{
        indexStringName = getObjectName();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
indexName = new IndexName(schemaName,indexStringName);
        {if ("" != null) return indexName;}
    throw new Error("Missing return statement in function");
  }

  final public List<ColumnDefinition> ColumnDefinitions() throws ParseException {List<ColumnDefinition> columnDefinitions = new ArrayList<ColumnDefinition>();
    ColumnDefinition columnDef = null;
    String columnName = null;
    String columnDataType = null;
    String spec = null;
    List<String> columnSpecs = new ArrayList<String>();
    columnName = getObjectName();
    columnDataType = getObjectName();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_PRIMARY:
      case T_NOT:
      case T_UNIQUE:
      case T_DEFAULT:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_2;
      }
      spec = ColumnSpec();
columnSpecs.add(spec);
    }
columnDef = new ColumnDefinition(columnName,columnDataType);
        columnDef.setColumnSpecs(new ArrayList<String>(columnSpecs));
                columnSpecs.clear();
        columnDefinitions.add(columnDef);
    label_3:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(T_COMMA);
      columnName = getObjectName();
      columnDataType = getObjectName();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case T_PRIMARY:
        case T_NOT:
        case T_UNIQUE:
        case T_DEFAULT:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_4;
        }
        spec = ColumnSpec();
columnSpecs.add(spec);
      }
columnDef = new ColumnDefinition(columnName,columnDataType);
            columnDef.setColumnSpecs(new ArrayList<String>(columnSpecs));
                        columnSpecs.clear();
            columnDefinitions.add(columnDef);
    }
{if ("" != null) return columnDefinitions;}
    throw new Error("Missing return statement in function");
  }

  final public String ColumnSpec() throws ParseException {String spec = null;
        String defaultValue = null;
        boolean isAutoincrement = false;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_PRIMARY:{
      jj_consume_token(T_PRIMARY);
      jj_consume_token(T_KEY);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_AUTOINCREMENT:{
        jj_consume_token(T_AUTOINCREMENT);
isAutoincrement =true;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        ;
      }
spec = "PRIMARY KEY";
                if(isAutoincrement){
                        spec+=" AUTOINCREMENT";
                }
                {if ("" != null) return spec;}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      if (jj_2_7(2)) {
        jj_consume_token(T_NOT);
        jj_consume_token(T_NULL);
{if ("" != null) return "NOT NULL";}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case T_UNIQUE:{
          jj_consume_token(T_UNIQUE);
{if ("" != null) return "UNIQUE";}
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          if (jj_2_8(2)) {
            jj_consume_token(T_DEFAULT);
            defaultValue = getObjectName();
{if ("" != null) return "DEFAULT "+defaultValue;}
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public List<Column> getColumns() throws ParseException {ArrayList<Column> columns = null;
        String columnName = null;
    jj_consume_token(T_OPEN_BRACKET);
    columnName = getObjectName();
columns = new ArrayList<Column>();
                        columns.add(new Column(columnName));
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_COMMA:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_5;
      }
      jj_consume_token(T_COMMA);
      columnName = getObjectName();
columns.add(new Column(columnName));
    }
    jj_consume_token(T_CLOSE_BRACKET);
{if ("" != null) return columns;}
    throw new Error("Missing return statement in function");
  }

  final public ConflictDecision getConflictDecision() throws ParseException {
    jj_consume_token(T_ON);
    jj_consume_token(T_CONFLICT);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_ROLLBACK:{
      jj_consume_token(T_ROLLBACK);
{if ("" != null) return ConflictDecision.ROLLBACK;}
      break;
      }
    case T_ABORT:{
      jj_consume_token(T_ABORT);
{if ("" != null) return ConflictDecision.ABORT;}
      break;
      }
    case T_FAIL:{
      jj_consume_token(T_FAIL);
{if ("" != null) return ConflictDecision.FAIL;}
      break;
      }
    case T_IGNORE:{
      jj_consume_token(T_IGNORE);
{if ("" != null) return ConflictDecision.IGNORE;}
      break;
      }
    case T_REPLACE:{
      jj_consume_token(T_REPLACE);
{if ("" != null) return ConflictDecision.REPLACE;}
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ForeignKeyClause getForeignKeyClause() throws ParseException {ForeignKeyClause foreignKeyClause = null;
        Table foreignTable = null;
        List<Column> columns = null;
        OnDeleteClause onDeleteClause = null;
    OnUpdateClause onUpdateClause = null;
    ForeignKeyDeferrable foreignKeyDeferrable = null;
    jj_consume_token(T_REFERENCES);
    foreignTable = Table();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_OPEN_BRACKET:{
      columns = getColumns();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    if (jj_2_9(2)) {
      onDeleteClause = getOnDeleteClause();
    } else {
      ;
    }
    if (jj_2_10(2)) {
      onUpdateClause = getOnUpdateClause();
    } else {
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_NOT:{
      foreignKeyDeferrable = getForeignKeyDeferrable();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      ;
    }
foreignKeyClause = new ForeignKeyClause(foreignTable);
                foreignKeyClause.setColumns(columns);
                foreignKeyClause.setOnDeleteClause(onDeleteClause);
                foreignKeyClause.setOnUpdateClause(onUpdateClause);
                foreignKeyClause.setForeignKeyDeferrable(foreignKeyDeferrable);
                {if ("" != null) return foreignKeyClause;}
    throw new Error("Missing return statement in function");
  }

  final public OnDeleteClause getOnDeleteClause() throws ParseException {ClauseDecision clauseDecision = null;
    jj_consume_token(T_ON);
    jj_consume_token(T_DELETE);
    clauseDecision = getClauseDecision();
{if ("" != null) return new OnDeleteClause(clauseDecision);}
    throw new Error("Missing return statement in function");
  }

  final public OnUpdateClause getOnUpdateClause() throws ParseException {ClauseDecision clauseDecision = null;
    jj_consume_token(T_ON);
    jj_consume_token(T_UPDATE);
    clauseDecision = getClauseDecision();
{if ("" != null) return new OnUpdateClause(clauseDecision) ;}
    throw new Error("Missing return statement in function");
  }

  final public ClauseDecision getClauseDecision() throws ParseException {
    if (jj_2_11(2)) {
      jj_consume_token(T_SET);
      jj_consume_token(T_NULL);
{if ("" != null) return ClauseDecision.SET_NULL;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_SET:{
        jj_consume_token(T_SET);
        jj_consume_token(T_DEFAULT);
{if ("" != null) return ClauseDecision.SET_DEFAULT;}
        break;
        }
      case T_CASCADE:{
        jj_consume_token(T_CASCADE);
{if ("" != null) return ClauseDecision.CASCADE;}
        break;
        }
      case T_RESTRICT:{
        jj_consume_token(T_RESTRICT);
{if ("" != null) return ClauseDecision.RESTRICT;}
        break;
        }
      case T_NO:{
        jj_consume_token(T_NO);
        jj_consume_token(T_ACTION);
{if ("" != null) return ClauseDecision.NO_ACTION;}
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }
